@@ -113,23 +113,32 @@ public:
                                      std::string const& table,
                                      std::string const& key_field,
                                      std::string const& index_table,
-                                     std::string const& geometry_table)
+                                     std::string const& geometry_table,
+                                     std::string const& intersects_token)
     {
         std::ostringstream spatial_sql;
         spatial_sql << std::setprecision(16);
-        spatial_sql << " WHERE " << key_field << " IN (SELECT pkid FROM " << index_table;
+        spatial_sql << key_field << " IN (SELECT pkid FROM " << index_table;
         spatial_sql << " WHERE xmax>=" << e.minx() << " AND xmin<=" << e.maxx() ;
         spatial_sql << " AND ymax>=" << e.miny() << " AND ymin<=" << e.maxy() << ")";
-        // substitute first WHERE found if not using JOIN (because we can't know the WHERE is on the right table)
-        if (boost::algorithm::ifind_first(query, "WHERE") && !boost::algorithm::ifind_first(query, "JOIN"))
+        if (boost::algorithm::ifind_first(query,  intersects_token))
         {
-            boost::algorithm::ireplace_first(query, "WHERE", spatial_sql.str() + " AND ");
+            boost::algorithm::ireplace_all(query, intersects_token, spatial_sql.str());
+            return true;
+        }
+        // substitute first WHERE found if not using JOIN
+        // (because we can't know the WHERE is on the right table)
+        else if (boost::algorithm::ifind_first(query, "WHERE")
+                 && !boost::algorithm::ifind_first(query, "JOIN"))
+        {
+            std::string replace(" WHERE " + spatial_sql.str() + " AND ");
+            boost::algorithm::ireplace_first(query, "WHERE", replace);
             return true;
         }
         // fallback to appending spatial filter at end of query
         else if (boost::algorithm::ifind_first(query, geometry_table))
         {
-            boost::algorithm::ireplace_first(query, table, table + " " + spatial_sql.str());
+            query = table + " WHERE " + spatial_sql.str();
             return true;
         }
         return false;
